catalytic_table_to_struct/example/src/non_compiling_code/failing_wrong_type_vec.stderr
error[E0277]: the trait bound `Vec<i32>: From<{integer}>` is not satisfied
  --> src/non_compiling_code/failing_wrong_type_vec.rs:10:5
   |
10 |     query!("select * from test_table where b = 1 and c in ?", a);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<{integer}>` is not implemented for `Vec<i32>`
   |
   = help: the following implementations were found:
             <Vec<T, A> as From<Box<[T], A>>>
             <Vec<T, A> as From<VecDeque<T, A>>>
             <Vec<T> as From<&[T]>>
             <Vec<T> as From<&mut [T]>>
           and 6 others
   = note: this error originates in the macro `query` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
   --> src/non_compiling_code/failing_wrong_type_vec.rs:10:5
    |
10  |     query!("select * from test_table where b = 1 and c in ?", a);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this method call resolves to `Self`
    |
    = note: multiple `impl`s satisfying `{integer}: scylla::frame::value::Value` found in the `scylla` crate:
            - impl scylla::frame::value::Value for i16;
            - impl scylla::frame::value::Value for i32;
            - impl scylla::frame::value::Value for i64;
            - impl scylla::frame::value::Value for i8;
note: required by a bound in `SerializedValues::add_value`
   --> $CARGO/scylla-0.3.0/src/frame/value.rs
    |
    |     pub fn add_value(&mut self, val: &impl Value) -> Result<(), SerializeValuesError> {
    |                                            ^^^^^ required by this bound in `SerializedValues::add_value`
    = note: this error originates in the macro `query` (in Nightly builds, run with -Z macro-backtrace for more info)
